fix(parcel-machine-service) fix query for overpass API